# KDTree_K_Means

./: CMakeLists.txt  README.md  main.cpp
Components/Direct/: direct.cpp  direct.hpp
Components/KDTree/: kdtree.cpp  kdtree.hpp
Components/KMeans/: kmeans.cpp  kmeans.hpp
Components/Reader/: reader.cpp  reader.hpp
Components/Tester/: tester.cpp
Components/Vec2D/: vec2d.cpp  vec2d.hpp
Components/Vtk_Builder/: vtk_builder.cpp  vtk_builder.hpp
Resources/: data2k.csv
